--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
     <meta name="description" content="Description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-
     <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css"> -->
 
-    <!-- Theme: Simple Dark -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css"> -->
-
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/A5yncX/docsify-theme-darcula@v1.0/darcula.css"> -->
-
+    <!-- theme -->
     <link rel="stylesheet" href="documentation/style.css" title="docsify-darklight-theme" type="text/css" />
 
-
+    <!-- sidebar arrow -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/sidebar.min.css" />
+    <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/sidebar-folder.min.css" /> -->
 
   </head>
 
@@ -35,7 +32,8 @@
 
         // sidebar
         loadSidebar: true,
-        subMaxLavel: 3,
+        subMaxLevel: 3,
+        sidebarDisplayLevel:1,
 
         // 搜尋功能
         search: {
@@ -66,6 +64,10 @@
 
     <!-- Docsify v4 -->
     <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+
+    <!-- sidebar -->
+    <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
+
 
     <!-- theme -->
     <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js" type="text/javascript">
