--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script>
       window.$docsify = {
         name: '專案文件',
-        repo: 'https://github.com/MestoChang/kinglydoc/',
+        // repo: 'https://github.com/MestoChang/kinglydoc/',
 
         // sidebar
         loadSidebar: true,
