--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         footer: {
           copy: '<div>Copyright &copy; 2024</div>',
           auth: '<div style="margin-top:4px"><strong><a href="https://kinglyrobot.com/" target="_blank">王道機器人股份有限公司</a></strong></div>',
-          pre: '<hr style="margin-top:4rem" />',
+          pre: '<br><hr style="margin-top:4rem" />',
           style: 'font-size: 14px; text-align: center;margin-top: 2rem',
         },
 
@@ -79,7 +79,6 @@
 
     <!-- sidebar -->
     <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
-
 
     <!-- theme -->
     <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js" type="text/javascript">
