--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>美容百科前端說明文件</title>
+    <title>美容百科前端規劃文件</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -27,7 +27,7 @@
 
     <script>
       window.$docsify = {
-        name: '專案文件',
+        name: '美容百科前端專案',
         // repo: 'https://github.com/MestoChang/kinglydoc/',
 
         // sidebar
