--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <script>
       window.$docsify = {
-        name: '美容百科前端專案',
+        name: '美容百科前端 v1.2',
         // repo: 'https://github.com/MestoChang/kinglydoc/',
 
         // sidebar
